FIxed errors and added trained model

--- a/nlp_model/Configs/base_config.cfg
+++ b/nlp_model/Configs/base_config.cfg
@@ -2,8 +2,8 @@
 # you can run spacy init fill-config to auto-fill all default settings:
 # python -m spacy init fill-config ./base_config.cfg ./config.cfg
 [paths]
-train = '../data/train_data.spacy'
-dev = '../data/valid_data.spacy'
+train = '../Data/train_data.spacy'
+dev = '../Data/valid_data.spacy'
 vectors = null
 [system]
 gpu_allocator = null
